--- a/assets/css/_responsive.scss
+++ b/assets/css/_responsive.scss
@@ -1,6 +1,14 @@
 /* Custom CSS Styling */
 
-@media (max-width: 1440px) {
+@media (max-width: 1660px) {
+}
+@media (max-width: 1399px) {
+}
+@media (max-width: 1199px) {
+}
+@media (max-width: 991px) {
+}
+@media (max-width: 767px) {
 }
 @media (max-width: 1200px) {
 	img {
